--- a/Selenium-Maven/test-output/emailable-report.html
+++ b/Selenium-Maven/test-output/emailable-report.html
@@ -30,98 +30,105 @@ td,th {border:1px solid #009;padding:.25em .5em}
 <table cellspacing="0" cellpadding="0" class="methodOverview" id="summary">
 <tr><th>Class</th><th>Method</th><th># of<br/>Scenarios</th><th>Start</th><th>Time<br/>(ms)</th></tr>
 <tr id="t1"><th colspan="5">C:/Users/fkara/Desktop/workspace1/selenium-java/selenium-java/Selenium-Maven &#8212; failed</th></tr>
-<tr class="failedodd"><td>Weeks.week_03.automationexercise.registerUser</td><td><a href="#m1"><b>verifyLoggedInAsUsernameIsVisible</b>  </a></td><td class="numi">1</td><td>1672942971819</td><td class="numi">5571</td></tr>
+<tr class="failedodd"><td>Weeks.week_03.org.registerUser</td><td><a href="#m1"><b>verifyLoggedInAsUsernameIsVisible</b>  </a></td><td class="numi">1</td><td>1672942971819</td><td class="numi">5571</td></tr>
 <tr><th colspan="5">C:/Users/fkara/Desktop/workspace1/selenium-java/selenium-java/Selenium-Maven &#8212; passed</th></tr>
 <tr class="passedodd"><td rowspan="2">TestNGIntro.LiveDemo</td><td><a href="#m2"><b>GetProductPrice</b>  </a></td><td class="numi">1</td><td>1672942950398</td><td class="numi">1119</td></tr><tr class="passedodd"><td><a href="#m3"><b>sortAToZButtonTest</b>  </a></td><td class="numi">1</td><td>1672942951544</td><td class="numi">542</td></tr>
 <tr class="passedeven"><td rowspan="3">TestNGIntro.LiveDemo2</td><td><a href="#m4"><b>filterBoxTest</b>  </a></td><td class="numi">1</td><td>1672942952088</td><td class="numi">459</td></tr><tr class="passedeven"><td><a href="#m5"><b>getProductPrice</b>  </a></td><td class="numi">1</td><td>1672942952548</td><td class="numi">122</td></tr><tr class="passedeven"><td><a href="#m6"><b>sortProductsWithNameTest</b>  </a></td><td class="numi">1</td><td>1672942952671</td><td class="numi">195</td></tr>
 <tr class="passedodd"><td rowspan="4">TestNGIntro.SimpleTest</td><td><a href="#m7"><b>regular</b>  </a></td><td class="numi">1</td><td>1672942952868</td><td class="numi">1</td></tr><tr class="passedodd"><td><a href="#m8"><b>streamCollect</b>  </a></td><td class="numi">1</td><td>1672942952871</td><td class="numi">24</td></tr><tr class="passedodd"><td><a href="#m9"><b>streamFilter</b>  </a></td><td class="numi">1</td><td>1672942952896</td><td class="numi">13</td></tr><tr class="passedodd"><td><a href="#m10"><b>streamMap</b>  </a></td><td class="numi">1</td><td>1672942952910</td><td class="numi">17</td></tr>
-<tr class="passedeven"><td rowspan="10">Weeks.week_03.automationexercise.registerUser</td><td><a href="#m11"><b>isHomePageVisisble</b>  </a></td><td class="numi">1</td><td>1672942952935</td><td class="numi">29</td></tr><tr class="passedeven"><td><a href="#m12"><b>clickSignUpLoginButton</b>  </a></td><td class="numi">1</td><td>1672942952966</td><td class="numi">2587</td></tr><tr class="passedeven"><td><a href="#m13"><b>verifyNewUserSignupIsVisible</b>  </a></td><td class="numi">1</td><td>1672942955554</td><td class="numi">140</td></tr><tr class="passedeven"><td><a href="#m14"><b>enterNameEmailAndClickSignUp</b>  </a></td><td class="numi">1</td><td>1672942955695</td><td class="numi">4193</td></tr><tr class="passedeven"><td><a href="#m15"><b>verifyENTERACCOUNTINFORMATIONIsVisible</b>  </a></td><td class="numi">1</td><td>1672942959891</td><td class="numi">129</td></tr><tr class="passedeven"><td><a href="#m16"><b>fillDetails</b>  </a></td><td class="numi">1</td><td>1672942960021</td><td class="numi">11327</td></tr><tr class="passedeven"><td><a href="#m17"><b>verifyACCOUNTCREATEDIsVisible</b>  </a></td><td class="numi">1</td><td>1672942971386</td><td class="numi">160</td></tr><tr class="passedeven"><td><a href="#m18"><b>clickContinueButton</b>  </a></td><td class="numi">1</td><td>1672942971547</td><td class="numi">269</td></tr><tr class="passedeven"><td><a href="#m19"><b>clickDeleteAccountButton</b>  </a></td><td class="numi">1</td><td>1672942977481</td><td class="numi">8635</td></tr><tr class="passedeven"><td><a href="#m20"><b>verifyACCOUNTDELETEDIsVisibleAndClickContinueButton</b>  </a></td><td class="numi">1</td><td>1672942986118</td><td class="numi">5294</td></tr>
+<tr class="passedeven"><td rowspan="10">Weeks.week_03.org.registerUser</td><td><a href="#m11"><b>isHomePageVisisble</b>  </a></td><td class="numi">1</td><td>1672942952935</td><td class="numi">29</td></tr><tr class="passedeven"><td><a href="#m12"><b>clickSignUpLoginButton</b>  </a></td><td class="numi">1</td><td>1672942952966</td><td class="numi">2587</td></tr><tr class="passedeven"><td><a href="#m13"><b>verifyNewUserSignupIsVisible</b>  </a></td><td class="numi">1</td><td>1672942955554</td><td class="numi">140</td></tr><tr class="passedeven"><td><a href="#m14"><b>enterNameEmailAndClickSignUp</b>  </a></td><td class="numi">1</td><td>1672942955695</td><td class="numi">4193</td></tr><tr class="passedeven"><td><a href="#m15"><b>verifyENTERACCOUNTINFORMATIONIsVisible</b>  </a></td><td class="numi">1</td><td>1672942959891</td><td class="numi">129</td></tr><tr class="passedeven"><td><a href="#m16"><b>fillDetails</b>  </a></td><td class="numi">1</td><td>1672942960021</td><td class="numi">11327</td></tr><tr class="passedeven"><td><a href="#m17"><b>verifyACCOUNTCREATEDIsVisible</b>  </a></td><td class="numi">1</td><td>1672942971386</td><td class="numi">160</td></tr><tr class="passedeven"><td><a href="#m18"><b>clickContinueButton</b>  </a></td><td class="numi">1</td><td>1672942971547</td><td class="numi">269</td></tr><tr class="passedeven"><td><a href="#m19"><b>clickDeleteAccountButton</b>  </a></td><td class="numi">1</td><td>1672942977481</td><td class="numi">8635</td></tr><tr class="passedeven"><td><a href="#m20"><b>verifyACCOUNTDELETEDIsVisibleAndClickContinueButton</b>  </a></td><td class="numi">1</td><td>1672942986118</td><td class="numi">5294</td></tr>
 </table>
 <h1>C:/Users/fkara/Desktop/workspace1/selenium-java/selenium-java/Selenium-Maven</h1>
-<h2 id="m1">Weeks.week_03.automationexercise.registerUser:verifyLoggedInAsUsernameIsVisible</h2>
+<h2 id="m1">Weeks.week_03.org.registerUser:verifyLoggedInAsUsernameIsVisible</h2>
 <div>
 <div class="stacktrace">org.openqa.selenium.NoSuchElementException: no such element: Unable to locate element: {&quot;method&quot;:&quot;xpath&quot;,&quot;selector&quot;:&quot;//div[2]/div/ul/li[10]/a&quot;}
-  (Session info: chrome=108.0.5359.125)
-For documentation on this error, please visit: https://selenium.dev/exceptions/#no_such_element
-Build info: version: &apos;4.7.2&apos;, revision: &apos;4d4020c3b7&apos;
-System info: os.name: &apos;Windows 11&apos;, os.arch: &apos;amd64&apos;, os.version: &apos;10.0&apos;, java.version: &apos;1.8.0_341&apos;
-Driver info: org.openqa.selenium.chrome.ChromeDriver
-Command: [9a632ee703d8a909a9e8acf042567632, findElement {using=xpath, value=//div[2]/div/ul/li[10]/a}]
-Capabilities {acceptInsecureCerts: false, browserName: chrome, browserVersion: 108.0.5359.125, chrome: {chromedriverVersion: 108.0.5359.71 (1e0e3868ee06..., userDataDir: C:\Users\fkara\AppData\Loca...}, goog:chromeOptions: {debuggerAddress: localhost:63974}, networkConnectionEnabled: false, pageLoadStrategy: normal, platformName: WINDOWS, proxy: Proxy(), se:cdp: ws://localhost:63974/devtoo..., se:cdpVersion: 108.0.5359.125, setWindowRect: true, strictFileInteractability: false, timeouts: {implicit: 0, pageLoad: 300000, script: 30000}, unhandledPromptBehavior: dismiss and notify, webauthn:extension:credBlob: true, webauthn:extension:largeBlob: true, webauthn:virtualAuthenticators: true}
-Session ID: 9a632ee703d8a909a9e8acf042567632
-	at sun.reflect.NativeConstructorAccessorImpl.newInstance0(Native Method)
-	at sun.reflect.NativeConstructorAccessorImpl.newInstance(NativeConstructorAccessorImpl.java:62)
-	at sun.reflect.DelegatingConstructorAccessorImpl.newInstance(DelegatingConstructorAccessorImpl.java:45)
-	at java.lang.reflect.Constructor.newInstance(Constructor.java:423)
-	at org.openqa.selenium.remote.codec.w3c.W3CHttpResponseCodec.createException(W3CHttpResponseCodec.java:200)
-	at org.openqa.selenium.remote.codec.w3c.W3CHttpResponseCodec.decode(W3CHttpResponseCodec.java:133)
-	at org.openqa.selenium.remote.codec.w3c.W3CHttpResponseCodec.decode(W3CHttpResponseCodec.java:53)
-	at org.openqa.selenium.remote.HttpCommandExecutor.execute(HttpCommandExecutor.java:184)
-	at org.openqa.selenium.remote.service.DriverCommandExecutor.invokeExecute(DriverCommandExecutor.java:167)
-	at org.openqa.selenium.remote.service.DriverCommandExecutor.execute(DriverCommandExecutor.java:142)
-	at org.openqa.selenium.remote.RemoteWebDriver.execute(RemoteWebDriver.java:535)
-	at org.openqa.selenium.remote.ElementLocation$ElementFinder$2.findElement(ElementLocation.java:162)
-	at org.openqa.selenium.remote.ElementLocation.findElement(ElementLocation.java:60)
-	at org.openqa.selenium.remote.RemoteWebDriver.findElement(RemoteWebDriver.java:351)
-	at org.openqa.selenium.remote.RemoteWebDriver.findElement(RemoteWebDriver.java:343)
-	at Weeks.week_03.automationexercise.registerUser.verifyLoggedInAsUsernameIsVisible(RegisterUser.java:105)
-	at sun.reflect.NativeMethodAccessorImpl.invoke0(Native Method)
-	at sun.reflect.NativeMethodAccessorImpl.invoke(NativeMethodAccessorImpl.java:62)
-	at sun.reflect.DelegatingMethodAccessorImpl.invoke(DelegatingMethodAccessorImpl.java:43)
-	at java.lang.reflect.Method.invoke(Method.java:498)
-	at org.testng.internal.MethodInvocationHelper.invokeMethod(MethodInvocationHelper.java:133)
-	at org.testng.internal.TestInvoker.invokeMethod(TestInvoker.java:584)
-	at org.testng.internal.TestInvoker.invokeTestMethod(TestInvoker.java:172)
-	at org.testng.internal.MethodRunner.runInSequence(MethodRunner.java:46)
-	at org.testng.internal.TestInvoker$MethodInvocationAgent.invoke(TestInvoker.java:804)
-	at org.testng.internal.TestInvoker.invokeTestMethods(TestInvoker.java:145)
-	at org.testng.internal.TestMethodWorker.invokeTestMethods(TestMethodWorker.java:146)
-	at org.testng.internal.TestMethodWorker.run(TestMethodWorker.java:128)
-	at java.util.ArrayList.forEach(ArrayList.java:1259)
-	at org.testng.TestRunner.privateRun(TestRunner.java:770)
-	at org.testng.TestRunner.run(TestRunner.java:591)
-	at org.testng.SuiteRunner.runTest(SuiteRunner.java:402)
-	at org.testng.SuiteRunner.runSequentially(SuiteRunner.java:396)
-	at org.testng.SuiteRunner.privateRun(SuiteRunner.java:355)
-	at org.testng.SuiteRunner.run(SuiteRunner.java:304)
-	at org.testng.SuiteRunnerWorker.runSuite(SuiteRunnerWorker.java:53)
-	at org.testng.SuiteRunnerWorker.run(SuiteRunnerWorker.java:96)
-	at org.testng.TestNG.runSuitesSequentially(TestNG.java:1180)
-	at org.testng.TestNG.runSuitesLocally(TestNG.java:1102)
-	at org.testng.TestNG.runSuites(TestNG.java:1032)
-	at org.testng.TestNG.run(TestNG.java:1000)
-	at com.intellij.rt.testng.IDEARemoteTestNG.run(IDEARemoteTestNG.java:66)
-	at com.intellij.rt.testng.RemoteTestNGStarter.main(RemoteTestNGStarter.java:109)
+    (Session info: chrome=108.0.5359.125)
+    For documentation on this error, please visit: https://selenium.dev/exceptions/#no_such_element
+    Build info: version: &apos;4.7.2&apos;, revision: &apos;4d4020c3b7&apos;
+    System info: os.name: &apos;Windows 11&apos;, os.arch: &apos;amd64&apos;, os.version: &apos;10.0&apos;,
+    java.version: &apos;1.8.0_341&apos;
+    Driver info: org.openqa.selenium.chrome.ChromeDriver
+    Command: [9a632ee703d8a909a9e8acf042567632, findElement {using=xpath, value=//div[2]/div/ul/li[10]/a}]
+    Capabilities {acceptInsecureCerts: false, browserName: chrome, browserVersion: 108.0.5359.125, chrome:
+    {chromedriverVersion: 108.0.5359.71 (1e0e3868ee06..., userDataDir: C:\Users\fkara\AppData\Loca...},
+    goog:chromeOptions: {debuggerAddress: localhost:63974}, networkConnectionEnabled: false, pageLoadStrategy: normal,
+    platformName: WINDOWS, proxy: Proxy(), se:cdp: ws://localhost:63974/devtoo..., se:cdpVersion: 108.0.5359.125,
+    setWindowRect: true, strictFileInteractability: false, timeouts: {implicit: 0, pageLoad: 300000, script: 30000},
+    unhandledPromptBehavior: dismiss and notify, webauthn:extension:credBlob: true, webauthn:extension:largeBlob: true,
+    webauthn:virtualAuthenticators: true}
+    Session ID: 9a632ee703d8a909a9e8acf042567632
+    at sun.reflect.NativeConstructorAccessorImpl.newInstance0(Native Method)
+    at sun.reflect.NativeConstructorAccessorImpl.newInstance(NativeConstructorAccessorImpl.java:62)
+    at sun.reflect.DelegatingConstructorAccessorImpl.newInstance(DelegatingConstructorAccessorImpl.java:45)
+    at java.lang.reflect.Constructor.newInstance(Constructor.java:423)
+    at org.openqa.selenium.remote.codec.w3c.W3CHttpResponseCodec.createException(W3CHttpResponseCodec.java:200)
+    at org.openqa.selenium.remote.codec.w3c.W3CHttpResponseCodec.decode(W3CHttpResponseCodec.java:133)
+    at org.openqa.selenium.remote.codec.w3c.W3CHttpResponseCodec.decode(W3CHttpResponseCodec.java:53)
+    at org.openqa.selenium.remote.HttpCommandExecutor.execute(HttpCommandExecutor.java:184)
+    at org.openqa.selenium.remote.service.DriverCommandExecutor.invokeExecute(DriverCommandExecutor.java:167)
+    at org.openqa.selenium.remote.service.DriverCommandExecutor.execute(DriverCommandExecutor.java:142)
+    at org.openqa.selenium.remote.RemoteWebDriver.execute(RemoteWebDriver.java:535)
+    at org.openqa.selenium.remote.ElementLocation$ElementFinder$2.findElement(ElementLocation.java:162)
+    at org.openqa.selenium.remote.ElementLocation.findElement(ElementLocation.java:60)
+    at org.openqa.selenium.remote.RemoteWebDriver.findElement(RemoteWebDriver.java:351)
+    at org.openqa.selenium.remote.RemoteWebDriver.findElement(RemoteWebDriver.java:343)
+    at Weeks.week_03.org.registerUser.verifyLoggedInAsUsernameIsVisible(RegisterUser.java:105)
+    at sun.reflect.NativeMethodAccessorImpl.invoke0(Native Method)
+    at sun.reflect.NativeMethodAccessorImpl.invoke(NativeMethodAccessorImpl.java:62)
+    at sun.reflect.DelegatingMethodAccessorImpl.invoke(DelegatingMethodAccessorImpl.java:43)
+    at java.lang.reflect.Method.invoke(Method.java:498)
+    at org.testng.internal.MethodInvocationHelper.invokeMethod(MethodInvocationHelper.java:133)
+    at org.testng.internal.TestInvoker.invokeMethod(TestInvoker.java:584)
+    at org.testng.internal.TestInvoker.invokeTestMethod(TestInvoker.java:172)
+    at org.testng.internal.MethodRunner.runInSequence(MethodRunner.java:46)
+    at org.testng.internal.TestInvoker$MethodInvocationAgent.invoke(TestInvoker.java:804)
+    at org.testng.internal.TestInvoker.invokeTestMethods(TestInvoker.java:145)
+    at org.testng.internal.TestMethodWorker.invokeTestMethods(TestMethodWorker.java:146)
+    at org.testng.internal.TestMethodWorker.run(TestMethodWorker.java:128)
+    at java.util.ArrayList.forEach(ArrayList.java:1259)
+    at org.testng.TestRunner.privateRun(TestRunner.java:770)
+    at org.testng.TestRunner.run(TestRunner.java:591)
+    at org.testng.SuiteRunner.runTest(SuiteRunner.java:402)
+    at org.testng.SuiteRunner.runSequentially(SuiteRunner.java:396)
+    at org.testng.SuiteRunner.privateRun(SuiteRunner.java:355)
+    at org.testng.SuiteRunner.run(SuiteRunner.java:304)
+    at org.testng.SuiteRunnerWorker.runSuite(SuiteRunnerWorker.java:53)
+    at org.testng.SuiteRunnerWorker.run(SuiteRunnerWorker.java:96)
+    at org.testng.TestNG.runSuitesSequentially(TestNG.java:1180)
+    at org.testng.TestNG.runSuitesLocally(TestNG.java:1102)
+    at org.testng.TestNG.runSuites(TestNG.java:1032)
+    at org.testng.TestNG.run(TestNG.java:1000)
+    at com.intellij.rt.testng.IDEARemoteTestNG.run(IDEARemoteTestNG.java:66)
+    at com.intellij.rt.testng.RemoteTestNGStarter.main(RemoteTestNGStarter.java:109)
 </div>
 </div>
 <p class="totop"><a href="#summary">back to summary</a></p>
-<h2 id="m2">Weeks.week_03.automationexercise.registerUser:verifyENTERACCOUNTINFORMATIONIsVisible</h2>
+<h2 id="m2">Weeks.week_03.org.registerUser:verifyENTERACCOUNTINFORMATIONIsVisible</h2>
 <p class="totop"><a href="#summary">back to summary</a></p>
 <h2 id="m3">TestNGIntro.SimpleTest:regular</h2>
 <p class="totop"><a href="#summary">back to summary</a></p>
-<h2 id="m4">Weeks.week_03.automationexercise.registerUser:verifyNewUserSignupIsVisible</h2>
+<h2 id="m4">Weeks.week_03.org.registerUser:verifyNewUserSignupIsVisible</h2>
 <p class="totop"><a href="#summary">back to summary</a></p>
 <h2 id="m5">TestNGIntro.LiveDemo2:filterBoxTest</h2>
 <p class="totop"><a href="#summary">back to summary</a></p>
-<h2 id="m6">Weeks.week_03.automationexercise.registerUser:fillDetails</h2>
+<h2 id="m6">Weeks.week_03.org.registerUser:fillDetails</h2>
 <p class="totop"><a href="#summary">back to summary</a></p>
 <h2 id="m7">TestNGIntro.SimpleTest:streamCollect</h2>
 <p class="totop"><a href="#summary">back to summary</a></p>
-<h2 id="m8">Weeks.week_03.automationexercise.registerUser:clickContinueButton</h2>
+<h2 id="m8">Weeks.week_03.org.registerUser:clickContinueButton</h2>
 <p class="totop"><a href="#summary">back to summary</a></p>
 <h2 id="m9">TestNGIntro.LiveDemo2:getProductPrice</h2>
 <p class="totop"><a href="#summary">back to summary</a></p>
-<h2 id="m10">Weeks.week_03.automationexercise.registerUser:clickSignUpLoginButton</h2>
+<h2 id="m10">Weeks.week_03.org.registerUser:clickSignUpLoginButton</h2>
 <p class="totop"><a href="#summary">back to summary</a></p>
 <h2 id="m11">TestNGIntro.LiveDemo:GetProductPrice</h2>
 <p class="totop"><a href="#summary">back to summary</a></p>
-<h2 id="m12">Weeks.week_03.automationexercise.registerUser:enterNameEmailAndClickSignUp</h2>
+<h2 id="m12">Weeks.week_03.org.registerUser:enterNameEmailAndClickSignUp</h2>
 <p class="totop"><a href="#summary">back to summary</a></p>
 <h2 id="m13">TestNGIntro.SimpleTest:streamMap</h2>
 <p class="totop"><a href="#summary">back to summary</a></p>
-<h2 id="m14">Weeks.week_03.automationexercise.registerUser:verifyACCOUNTCREATEDIsVisible</h2>
+<h2 id="m14">Weeks.week_03.org.registerUser:verifyACCOUNTCREATEDIsVisible</h2>
 <p class="totop"><a href="#summary">back to summary</a></p>
-<h2 id="m15">Weeks.week_03.automationexercise.registerUser:clickDeleteAccountButton</h2>
+<h2 id="m15">Weeks.week_03.org.registerUser:clickDeleteAccountButton</h2>
 <p class="totop"><a href="#summary">back to summary</a></p>
 <h2 id="m16">TestNGIntro.LiveDemo:sortAToZButtonTest</h2>
 <p class="totop"><a href="#summary">back to summary</a></p>
@@ -129,8 +136,8 @@ Session ID: 9a632ee703d8a909a9e8acf042567632
 <p class="totop"><a href="#summary">back to summary</a></p>
 <h2 id="m18">TestNGIntro.SimpleTest:streamFilter</h2>
 <p class="totop"><a href="#summary">back to summary</a></p>
-<h2 id="m19">Weeks.week_03.automationexercise.registerUser:verifyACCOUNTDELETEDIsVisibleAndClickContinueButton</h2>
+<h2 id="m19">Weeks.week_03.org.registerUser:verifyACCOUNTDELETEDIsVisibleAndClickContinueButton</h2>
 <p class="totop"><a href="#summary">back to summary</a></p>
-<h2 id="m20">Weeks.week_03.automationexercise.registerUser:isHomePageVisisble</h2>
+<h2 id="m20">Weeks.week_03.org.registerUser:isHomePageVisisble</h2>
 <p class="totop"><a href="#summary">back to summary</a></p>
 </body></html>
